kubernetes/apps/public/netpol/app/block-local-eg-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-local-egress
spec:
  podSelector: {} # Applies to all pods in the namespace
  policyTypes:
    - Egress
  egress:
    # Allow all egress traffic except to 192.168.3.0/24
    - to:
        - namespaceSelector: {}
    - to:
        - podSelector: {}
    - to: []
      except:
        - ipBlock:
            cidr: 192.168.1.0/24
